flag flex alignment, small fixes

--- a/profile/themes/openculturas_base/templates/field/field.scss
+++ b/profile/themes/openculturas_base/templates/field/field.scss
@@ -18,7 +18,7 @@
     .field__label {
       padding-right: .75rem;
       position: relative;
-      top: .1rem;
+      top: -.1rem;
     }
   }
 }
