--- a/profile/themes/openculturas_base/templates/node/node-layout.scss
+++ b/profile/themes/openculturas_base/templates/node/node-layout.scss
@@ -40,6 +40,12 @@
         }
       }
 
+      > .interact {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+      }
+
     }
   }
 }
